# BiteByte

./: .gitignore  CMakeLists.txt  CMakeSources.cmake  README.md  binaryByteSize.hpp  byte.hpp
